@@ -1,0 +1,9 @@
+#! /bin/sh
+
+# Copyright (C) 2010 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+test -d tests || mkdir -p tests
+
+./ppltotf -verbose $srcdir/tests/cmr10 tests/xcmr10 || exit 1
+
